covid api working

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 </head>
 <body>
     
-    <script src="./Project-1/assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </html>
