--- a/ResultsPage.html
+++ b/ResultsPage.html
@@ -15,8 +15,8 @@
           Test
         </p>
       </nav>
-      <div class="container">
-      <table class="table">
+      <div class="container columns">
+      <table class="table column">
         <thead>
           <tr>
             <th>City</th>
@@ -40,7 +40,7 @@
         </tbody>
       </table>
 
-      <div class="card">
+      <div class="card column">
         <div class="card-image">
           <figure class="image is-4by3">
             <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
