reduced table columns, added table IDs, added an image

--- a/ResultsPage.html
+++ b/ResultsPage.html
@@ -16,34 +16,34 @@
         </p>
       </nav>
       <div class="container columns">
-      <table class="table column">
+      <table class="table column" id="resultsTable">
         <thead>
           <tr>
             <th>City</th>
-            <th><abbr title="Played">Today's Cases</abbr></th>
-            <th><abbr title="Won">YTD Cases</abbr></th>
-            <th><abbr title="Drawn">All time cases</abbr></th>
-            <th><abbr title="Lost">L</abbr></th>
-            <th><abbr title="Goals for">GF</abbr></th>
+            <th><abbr title="TC">Today's Cases</abbr></th>
+            <th><abbr title="YTDC">YTD Cases</abbr></th>
+            <th><abbr title="ATC">All time cases</abbr></th>
           </tr>
         </thead>
-        <tbody>
+
+        <!-- I think we're supposed to append the following as children in JS. -->
+
+        <!-- <tbody>
           <tr>
-            <td><a href="" title=""></a> 
-            </td>
+            <td><a href="" title=""></a></td>
             <td></td>
             <td></td>
             <td></td>
             <td</td>
             <td></td>
           </tr>
-        </tbody>
+        </tbody> -->
       </table>
 
       <div class="card column">
         <div class="card-image">
           <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+            <img src="https://static.dw.com/image/57035352_101.jpg" alt="Concert goers wearing masks">
           </figure>
         </div>
         
