--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </p>
       </nav>
       
-      
-      <div class="container is-fullhd">
-        <div class="notification is-black">
+      <section class="section is-large">
+      <div class="container">
+        <div class="notification is-black is-fullheight">
             <div class="control">
                 <h1>Some Text</h1>
-                <input id="location" class="input" type="text" placeholder="Text input">
+                <input id="location" class="input" type="text" placeholder="Enter City Name">
               </div>
-              <div class="control">
-                <div id="eventInput" class="select">
+              <div class="control is-expanded">
+                <div id="eventInput" class="select is-fullwidth">
                   <select>
                     <option id="concert">Concerts</option>
                     <option id="sports">Sports</option>
@@ -32,10 +32,11 @@
                   </select>
                 </div>
               </div>
-              <div class="control">
-                <button id="submitBtn" class="button is-primary">Submit</button>
+              <div class="buttons has-addons is-centered">
+                <button id="submitBtn" class="button is-large is-primary is-rounded">Submit</button>
               </div>
         </div>
       </div>
+    </section>
     <script src="./assets/script.js"></script>
 </html>
