added original search button for multiple search functionality

--- a/ResultsPage.html
+++ b/ResultsPage.html
@@ -49,7 +49,25 @@
         
       </div>
     </div>
-
+    <div class="container is-fullhd">
+        <div class="notification is-black">
+            <div class="control">
+                <h1>Search for a new city</h1>
+                <input id="location" class="input" type="text" placeholder="Text input">
+              </div>
+              <div class="control">
+                <div id="eventInput" class="select">
+                  <select>
+                    <option id="concert">Concerts</option>
+                    <option id="sports">Sports</option>
+                    <option id="attractions">Attractions</option>
+                  </select>
+                </div>
+              </div>
+              <div class="control">
+                <button id="submitBtn" class="button is-primary">Submit</button>
+              </div>
+        </div>
 
 
 
