added eventvalue so now when you search a location it will provide the user a respose from the city andtype of event they searched

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <input id="location" class="input" type="text" placeholder="Enter City Name">
               </div>
               <div class="control is-expanded">
-                <div id="eventInput" class="select is-fullwidth">
-                  <select>
-                    <option id="concert">Concerts</option>
+                <div class="select is-fullwidth">
+                  <select id="eventInput">
+                    <option id="concert">Music</option>
                     <option id="sports">Sports</option>
-                    <option id="attractions">Attractions</option>
+                    <option id="attractions">Venue</option>
                   </select>
                 </div>
               </div>
