commented a couple lines of code out

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <div id="resultsPage" class="container columns">
       <table class="table column" id="resultsTable">
         <thead>
-          <tr>
-            <th>City</th>
+          <tr> 
+           <th>City</th> 
             <th><abbr title="TC">Today's Cases</abbr></th>
             <th><abbr title="YTDC">YTD Cases</abbr></th>
             <th><abbr title="ATC">All time cases</abbr></th>
@@ -66,9 +66,9 @@
 
       <div class="card column">
         <div class="card-image">
-          <figure class="image is-4by3">
+          <!-- <figure class="image is-4by3">
             <img src="https://static.dw.com/image/57035352_101.jpg" alt="Concert goers wearing masks">
-          </figure>
+          </figure> -->
         </div>
         
       </div>
