--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- I think we're supposed to append the following as children in JS. -->
 
-        <!-- <tbody>
+        <tbody>
           <tr>
             <td><a href="" title=""></a></td>
             <td></td>
@@ -61,7 +61,7 @@
             <td</td>
             <td></td>
           </tr>
-        </tbody> -->
+        </tbody>
       </table>
 
       <div class="card column">
