added the links and appended them to the html page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         
       </div>
-      <table class="table">
+      <table class="table" id="tmResults">
         <thead>
           <tr>
             <th>Date</th>
