appended covid case numbers

--- a/index.html
+++ b/index.html
@@ -44,24 +44,15 @@
       <table class="table column" id="resultsTable">
         <thead>
           <tr> 
-           <th>City</th> 
-            <th><abbr title="TC">Today's Cases</abbr></th>
-            <th><abbr title="YTDC">YTD Cases</abbr></th>
-            <th><abbr title="ATC">All time cases</abbr></th>
+           <th>State</th> 
+            <th>Today's Confirmed Cases</th>
+            <th>All time cases</th>
           </tr>
         </thead>
 
         <!-- I think we're supposed to append the following as children in JS. -->
 
         <tbody>
-          <tr>
-            <td><a href="" title=""></a></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td</td>
-            <td></td>
-          </tr>
         </tbody>
       </table>
 
@@ -80,109 +71,7 @@
           </tr>
         </thead>
         <tbody>
-          <!-- <tr>
-            <th></th>
-            <td><a href="" title=""></a>
-            </td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a>
-            </td>
-            <td></td>
-          </tr>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a>
-            </td>
-            <td></td>
-          <tr>
-            <th></th>
-            <td><a href="" title=""></a>
-            </td>
-            <td></td>
-          </tr> -->
+  
         </tbody>
       </table>
     </div>
