css style update, added if statement if input values were empty

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar is-link" role="navigation" aria-label="main navigation">
-        <p class="navbar-brand">
-          Test
+    <nav class="navbar content" role="navigation" aria-label="main navigation">
+        <p class="navbar-brand has-text-centered title is-1">
+          Event Covid Tracker
         </p>
       </nav>
       
@@ -52,8 +52,8 @@
 
         <!-- I think we're supposed to append the following as children in JS. -->
 
-        <tbody>
-        </tbody>
+        <!-- <tbody>
+        </tbody> -->
       </table>
 
         
@@ -70,10 +70,11 @@
             <th>Venue</th>
           </tr>
         </thead>
-        <tbody>
+        <!-- <tbody>
   
-        </tbody>
+        </tbody> -->
       </table>
     </div>
     <script src="./assets/script.js"></script>
+  </body>
 </html>
