Added previous search history lists and fixed capital letters

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
               </div>
         </div>
       </div>
+      <div id="search-history">
+
+      </div>
+
     </section>
     <div id="resultsPage" class="container columns">
       <table class="table column" id="resultsTable">
