updated CSS styling

--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
               </div>
         </div>
       </div>
-      <div id="search-history">
-
+      <div class="textHistory title is-3">
+        <p>Search History</p>
+      </div>
+      <div class="containerEl">
+        <div class="card">
+          <div id="search-history"></div>
+        
+           </div>
       </div>
 
-    </section>
+      </section>
     <div id="resultsPage" class="container columns">
       <table class="table column" id="resultsTable">
         <thead>
@@ -52,7 +58,7 @@
             <th>Today's Confirmed Cases</th>
             <th>All time cases</th>
           </tr>
-          <tr id="search-history">
+          <!-- <tr id="search-history"> -->
           </tr>
         </thead>
 
