--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       </nav>
       
       <section id="searchPage" class="section is-large">
+        <div class="w3-content w3-section" style="background: fixed;">
+          <img class="mySlides" src="C:\Users\andre\Desktop\Project-1\assets\concert.jpg" style="width:100%">
+          <img class="mySlides" src="C:\Users\andre\Desktop\Project-1\assets\sporting-events.jpg" style="width:100%">
+          <img class="mySlides" src="C:\Users\andre\Desktop\Project-1\assets\venue.jpg" style="width:100%">
+        </div>
       <div class="container">
         <div class="notification is-black is-fullheight">
             <div class="control">
