--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <select id="eventInput">
                     <option id="concert">Music</option>
                     <option id="sports">Sports</option>
-                    <option id="attractions">Venue</option>
+                    <option id="attractions">Venue hello</option>
                   </select>
                 </div>
               </div>
