--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           Event Covid Tracker
         </p>
       </nav>
-      
+      <!-- removing section here -->
       <section id="searchPage" class="section is-large">
       <div class="container">
         <div class="notification is-black is-fullheight">
