--- a/index.html
+++ b/index.html
@@ -11,22 +11,14 @@
     <title>Event Covid Tracker</title>
 </head>
   <body>
-    <nav class="navbar content mb-0" role="navigation" aria-label="main navigation">
+    <nav class="navbar content" role="navigation" aria-label="main navigation">
         <p class="navbar-brand has-text-centered title is-1">
           Event Covid Tracker
         </p>
       </nav>
       <!-- removing section here -->
-    <section id="searchPage" class="section is-large">
-
-<!--       <section id="searchPage" class="section is-large">
-        <div class="w3-content w3-section" style="background: fixed;">
-          <img class="mySlides" src="C:\Users\andre\Desktop\Project-1\assets\concert.jpg" style="width:100%">
-          <img class="mySlides" src="C:\Users\andre\Desktop\Project-1\assets\sporting-events.jpg" style="width:100%">
-          <img class="mySlides" src="C:\Users\andre\Desktop\Project-1\assets\venue.jpg" style="width:100%">
-        </div> -->
-
-      <div class="container">
+     <section id="searchPage" class="section is-large"> 
+     <div class="container">
         <div class="notification is-black is-fullheight">
           <div class="control">
                 <h1>Please search for a city, state, and select a type of entertainment you are looking for.</h1>
@@ -48,10 +40,10 @@
         </div>
       </div>
 
-      <div id="search-history"></div>
+      <!-- <div id="search-history"></div>
     </section>
 
-    <div id="resultsPage" class="container columns mb-0">
+    <div id="resultsPage" class="container columns mb-0"> -->
 
       <div class="textHistory title is-3">
         <p>Search History</p>
@@ -74,7 +66,7 @@
             <th>All time cases</th>
           </tr>
 
-          <tr id="search-history"></tr>
+          <!-- <tr id="search-history"></tr> -->
 
           <!-- <tr id="search-history"> -->
           </tr>
