final stylying and readme created

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       </section>
-    <div id="resultsPage" class="container columns">
+    <div id="resultsPage" class="container columns results-page">
       <table class="table column" id="resultsTable">
         <thead>
           <tr> 
@@ -58,21 +58,11 @@
             <th>Today's Confirmed Cases</th>
             <th>All time cases</th>
           </tr>
-          <!-- <tr id="search-history"> -->
+
           </tr>
         </thead>
 
-        <!-- I think we're supposed to append the following as children in JS. -->
-
-        <!-- <tbody>
-        </tbody> -->
       </table>
-
-        
-   
-
-
-      
       <table class="table" id="tmResults">
 
         <thead>
@@ -82,9 +72,7 @@
             <th>Venue</th>
           </tr>
         </thead>
-        <!-- <tbody>
-  
-        </tbody> -->
+
       </table>
     </div>
     <script src="./assets/script.js"></script>
